# csa-google-workspace

./: .gitignore  AGENTS.md  AUDIT-2026-07-22.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  SECURITY.md  TODO.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  release.yml  tests.yml
docs/: AUDIT-2026-07-22.md  SECURITY-AUDIT-2026-07-22.md
docs/superpowers/plans/: 2026-07-20-foundations.md  2026-07-21-comments.md  2026-07-21-content-read.md  2026-07-22-content-write.md  2026-07-22-sheets-cellmap.md  2026-07-22-suggestions-read.md
docs/superpowers/specs/: 2026-07-20-csa-google-workspace-design.md  2026-07-23-mcp-server-design.md
experiments/: README.md
experiments/anchor-probe/: README.md  RESULTS.md  extract_comments.py  probe.py
experiments/comment-lifecycle/: RESULTS.md  probe_lifecycle.py
experiments/docs-suggestions/: RESULTS.md  probe_suggestions.py
experiments/sheets-cellmap/: RESULTS.md  probe_cellmap.py
research/: docs-suggestions-reference.md  google-drive-comments-reference.md  mcp-protocol-notes.md  mcp-server-design.md  server-landscape.md
src/csa_google_workspace/: __init__.py  _cellmap.py  _content.py  _errors.py  _services.py  auth.py  backend.py  base.py  comments.py  exceptions.py  suggestions.py  workspace.py
src/csa_google_workspace/documents/: __init__.py  doc.py  sheet.py  slides.py
tests/: test_apibackend_contract.py  test_apibackend_errors.py  test_auth.py  test_auth_lifecycle.py  test_backend.py  test_backend_comments.py  test_backend_conformance.py  test_backend_content.py  test_backend_write.py  test_cellmap.py  test_cellmap_bounds.py  test_comment_detached.py  test_comment_model.py  test_comment_mutation.py  test_comments_collection.py  test_content_aliasing.py  test_doc_content.py  test_doc_suggestions.py  test_doc_write.py  test_document.py  test_document_lifecycle.py  test_errors.py  test_errors_edge.py  test_exceptions.py  test_packaging.py  test_public_api.py  test_repr_redaction.py  test_services.py  test_sheet_cellmap.py  test_sheet_content.py  test_sheet_create_comment.py  test_sheet_quoting.py  test_sheet_write.py  test_slides_content.py  test_slides_write.py  test_suggestions.py  test_workspace.py
tests/integration/: test_all_types_live.py  test_comments_live.py  test_content_live.py  test_oauth_live.py
tests/oauth/: test_oauth_flow.py
