[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "csa-google-workspace"
dynamic = ["version"]
description = "Read/write content and manage comments on Google Docs, Sheets, and Slides"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Cloud Security Alliance" }]
maintainers = [{ name = "Kurt Seifried", email = "kseifried@cloudsecurityalliance.org" }]
keywords = [
    "google",
    "google-workspace",
    "google-docs",
    "google-sheets",
    "google-slides",
    "google-drive",
    "comments",
    "suggestions",
    "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/CloudSecurityAlliance/csa-google-workspace"
Repository = "https://github.com/CloudSecurityAlliance/csa-google-workspace"
Issues = "https://github.com/CloudSecurityAlliance/csa-google-workspace/issues"
Changelog = "https://github.com/CloudSecurityAlliance/csa-google-workspace/blob/main/CHANGELOG.md"

# Single source of truth for the version: csa_google_workspace.__version__
# (setuptools reads it by static AST parse; no need to import the package).
[tool.setuptools.dynamic]
version = { attr = "csa_google_workspace.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

# Ship the PEP 561 marker so downstream mypy/pyright consume the inline type hints.
[tool.setuptools.package-data]
csa_google_workspace = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
